# rust

./: .gitignore  README.md  output.txt  rust.code-workspace
catvision/: Cargo.toml  README.md
catvision/.cargo/: config.toml
catvision/configs/: config-prod-classify.json  config-prod-describe.json  config-prod.json
catvision/crates/cli/: Cargo.toml
catvision/crates/cli/src/: main.rs
catvision/crates/config/: Cargo.toml
catvision/crates/config/src/test/: config.json
catvision/crates/core/: Cargo.toml
catvision/crates/core/src/: lib.rs
catvision/crates/format/: Cargo.toml
catvision/crates/format/src/: csv.rs  html.rs
catvision/crates/llm/: Cargo.toml
catvision/crates/llm/src/core/: categorization.rs  description.rs  mod.rs  prompt.rs  tools.rs
catvision/crates/statistics/: Cargo.toml
catvision/crates/statistics/src/: lib.rs
catvision/crates/trait/: Cargo.toml
catvision/crates/trait/src/: lib.rs
catvision/crates/utils/: Cargo.toml
catvision/crates/utils/src/: category.rs  env.rs  lib.rs
catvision/src/: main.rs  my_traits.rs  statistics.rs
catvision/src/config/: mod.rs
catvision/src/format/: csv.rs  html.rs  mod.rs
catvision/src/llm/: mod.rs
catvision/src/llm/core/: mod.rs
catvision/src/llm/providers/gemini/: caching.rs  generating.rs  network.rs
catvision/src/utils/: mod.rs
catvision/utils/: compare.py  csv2sqlite.py  process_domains_chunks.sh  split_domains_csv.sh
market-simulator/: .dockerignore  .gitignore  Cargo.toml  LICENSE  README.md  build-release.sh  prometheus.yml
market-simulator/benches/: benches.rs
market-simulator/config/: fifo-spec.json
market-simulator/crates/config/: Cargo.toml  default.json  docker.json
market-simulator/crates/config/gateway/: default.json  docker.json  docker.local.json
market-simulator/crates/config/markets/: nasdaq.json  nyse.json
market-simulator/crates/config/src/: lib.rs
market-simulator/crates/db/: Cargo.toml  README.md
market-simulator/crates/db/src/: lib.rs
market-simulator/crates/execution-report/: Cargo.toml  README.md
market-simulator/crates/execution-report/src/: lib.rs
market-simulator/crates/grpc/: Cargo.toml  build.rs
market-simulator/crates/grpc/proto/: market_control.proto
market-simulator/crates/grpc/src/: lib.rs
market-simulator/crates/logging/: Cargo.toml  README.md  lib.rs
market-simulator/crates/logging/src/: lib.rs
market-simulator/crates/market-feed/: Cargo.toml  README.md
market-simulator/crates/market-feed/src/: engine.rs  types.rs
market-simulator/crates/memory/: Cargo.toml
market-simulator/crates/memory/src/: lib.rs
market-simulator/crates/order-book/: Cargo.toml  README.md
market-simulator/crates/order-book/bench/: bench.rs
market-simulator/crates/order-book/src/: aggregator.rs  book.rs  engine.rs  lib.rs  order_book.rs  snapshot.rs  types.rs
market-simulator/crates/protocol/: Cargo.toml
market-simulator/crates/protocol/FIX/: Cargo.toml  README.md
market-simulator/crates/protocol/FIX/benches/: fix.rs
market-simulator/crates/protocol/FIX/examples/: profile_simd.rs
market-simulator/crates/protocol/FIX/src/: engine.rs  lib.rs  parser.rs  tags.rs
market-simulator/crates/protocol/benches/: fix.rs
market-simulator/crates/protocol/examples/: profile_simd.rs
market-simulator/crates/protocol/src/: fix.rs  fix_engine.rs  lib.rs
market-simulator/crates/proxy/: Cargo.toml  README.md
market-simulator/crates/proxy/src/: lib.rs  server.rs
market-simulator/crates/server/: Cargo.toml  README.md
market-simulator/crates/server/src/: lib.rs  multicast.md  multicast.rs  tcp.rs
market-simulator/crates/snapshot/: Cargo.toml  README.md
market-simulator/crates/snapshot/src/: encode.rs  engine.rs  lib.rs  types.rs
market-simulator/crates/types/: Cargo.toml
market-simulator/crates/types/src/: arithmetic.rs  consts.rs  execution_report.rs  lib.rs  macros.rs  metrics.rs  multicast.rs  order.rs  trade.rs
market-simulator/crates/utils/src/: functions.rs  lib.rs  timestamp.rs  traits.rs
market-simulator/crates/web/: Cargo.toml  README.md
market-simulator/crates/web/backend/: Cargo.toml
market-simulator/crates/web/backend/src/: auth.rs  fix_session.rs  gateway.rs  lib.rs  login.rs  metrics.rs  order_book.rs  (+4 more)
market-simulator/crates/web/docs/: IMPLEMENTATION-REPORT.md  POOLING-SUMMARY.md  grpc-pooling-optimization.md
market-simulator/crates/web/frontend/: Cargo.toml  index.html  login.html
market-simulator/crates/web/players/: Cargo.toml  README.md  build.rs
market-simulator/crates/web/src/: auth.rs  fix_session.rs  gateway.rs  lib.rs  login.rs  order_book.rs  players.rs  server.rs  state.rs  ws.rs
market-simulator/deployment/: .dockerignore  DEPLOYMENT_INSTRUCTIONS.md  DOCKER_DEPLOYMENT.md  Dockerfile  Dockerfile.gateway  Dockerfile.players  PER_MARKET_DEPLOYMENT.md  docker-compose.yml  docker.sh  nginx-marketsim.conf
market-simulator/monitoring/: prometheus.yml
market-simulator/papers/: fix-parser.md  market-simulator.md
market-simulator/src/: gateway.rs  main.rs  startup.rs
market-simulator/tools/: README.md  aapl_buy_once.py  aapl_sell_once.py  client.py  fix_web_terminal.py  init_markets_pg.sh  load_test.py  ws_snapshot_client.py
openai/: Cargo.toml  llm_reasoning.txt  output.txt
openai/src/: category.rs  config.json  csv.rs  ctx.rs  gemini.rs  html.rs  llm.rs  main.rs  my_traits.rs  output.txt  statistics.rs
openai/src/config/: mod.rs
openai/src/config/test/: config.json
openai/src/format/: csv.rs
openai/src/llm/core/: mod.rs
openai/src/utils/: mod.rs
solana/counter_program/: Cargo.toml
solana/counter_program/examples/: client.rs
solana/counter_program/src/: lib.rs
spsc/: Cargo.toml  README.md  compare_cache.sh
spsc/benches/: spsc.rs
spsc/examples/: profile_aligned.rs  profile_lock.rs  profile_unaligned.rs
spsc/papers/: cache-management.md  spsc-implementation.md
spsc/src/: lib.rs  spsc_lock.rs  spsc_lock_free.rs
spsc/src/example/: profile_unaligned.rs
ssecret/: .gitignore  Cargo.toml  config.json  generate_files.sh
ssecret/src/: analyser.rs  config.rs  main.rs
(+81 files in other folders)
