[package]
name = "catvision"
version = "0.1.0"
edition = "2024"

[dependencies]
async-scoped = { version = "0.9.0", features = ["tokio", "use-tokio"] }
atomic_float = "1.1.0"
chrono = { version = "0.4.42", features = ["serde", "std"] }
clap = { version = "4.5.52", features = ["derive"] }
csv = "1.4.0"
futures = "0.3.31"
indexmap = { version = "2.12.0", features = ["serde"] }
itertools = "0.14.0"
once_cell = "1.21.3"
rand = "0.9.2"
reqwest = { version = "0.12.24", features = ["json"] }
serde = "1.0.228"
serde_json = "1.0.145"
tldextract = "0.6.0"
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1.44"
