[workspace]
resolver = "2"

members = [
    "crates/core",
    "crates/config",
    "crates/format",
    "crates/llm",
    "crates/utils",
    "crates/cli",
    "crates/statistics",
    "crates/trait",
]

# Shared dependencies across all crates
[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Optimization profiles
[profile.dev]
# Optimize dependencies even in dev mode for faster runtime
opt-level = 1

[profile.dev.package."*"]
opt-level = 2

[profile.release]
# Full optimizations for release
lto = "thin"                    # Link-time optimization
codegen-units = 1               # Better optimization, slower compile
strip = true                    # Remove debug symbols
panic = "abort"                 # Smaller binary size

# Optional: separate profile for faster release builds during development
[profile.release-dev]
inherits = "release"
lto = false
codegen-units = 16
strip = false