[workspace]
resolver = "2"

members = [
    "crates/order-book",
    "crates/protocol",
    "crates/logging",
    "crates/memory",
    "crates/utils",
]

# Shared dependencies across all crates
[workspace.dependencies]
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
tracing-appender = "0.2"
criterion = "0.8.2"
hdrhistogram = "7.0"
spsc = { path = "../spsc" }


# Optimization profiles
[profile.dev]
opt-level = 1

[profile.release]
# Full optimizations for release
lto = "thin"                    # Link-time optimization
codegen-units = 1               # Better optimization, slower compile
strip = true                    # Remove debug symbols
panic = "abort"

[profile.bench]
opt-level = 3
lto = "thin"
codegen-units = 1

[profile.profiling]
inherits = "release"
codegen-units = 16
debug = true
strip = false