[workspace]
resolver = "2"

members = [
    "crates/order-book",
    "crates/protocol/FIX",
    "crates/logging",
    "crates/memory",
    "crates/utils",
    "crates/server",
    "crates/execution-report",
    "crates/types",
    "crates/web",
    "crates/db",
    "crates/grpc",
    "crates/config",
    "crates/market-feed",
    "crates/snapshot",
    "crates/proxy",
]

# Shared dependencies across all crates
[workspace.dependencies]
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
tracing-appender = "0.2"
criterion = "0.8.2"
hdrhistogram = "7.0"
spsc = { path = "../spsc" }
crossbeam = "0.8.2"
crossbeam-channel = "0.5.15"
lazy_static = "1.4.0"
tokio    = { version = "1", features = ["full"] }   # ← add this
serde    = { version = "1", features = ["derive"] }  # ← add this
serde_json = "1" 
core_affinity = "0.8.3"
arc-swap = "1.9.1"

# Main binary crate
[package]
name = "market-simulator"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
server = { path = "crates/server" }
fix = { path = "crates/protocol/FIX" }
order-book = { path = "crates/order-book" }
memory = { path = "crates/memory" }
execution-report = { path = "crates/execution-report" }
types = { path = "crates/types" }
db = { path = "crates/db" }
web   = { path = "crates/web" }
market-feed = { path = "crates/market-feed" }
snapshot = { path = "crates/snapshot" }
utils = { path = "crates/utils" }
crossbeam.workspace = true
crossbeam-channel.workspace = true
spsc.workspace = true
core_affinity = "0.8.3"
ctrlc = "3.2.0"
tokio = { version = "1", features = ["full"] }
tracing.workspace = true
tracing-subscriber.workspace = true
config = { path = "crates/config" }
clap = { version = "=4.5.49", features = ["derive"] }
grpc  = { path = "crates/grpc" }
axum = { version = "0.8" }
arc-swap.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest = { version = "0.12.0", default-features = false, features = ["json", "rustls-tls"] }
tokio-tungstenite = { version = "0.29.0", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres"] }


# Optimization profiles
[profile.dev]
opt-level = 1

[profile.release]
# Full optimizations for release
lto = "thin"                    # Link-time optimization
codegen-units = 1               # Better optimization, slower compile
strip = true                    # Remove debug symbols
panic = "abort"

[profile.bench]
debug = true
opt-level = 3
lto = "thin"
codegen-units = 1

[profile.profiling]
inherits = "release"
codegen-units = 16
debug = true
strip = false

[[bench]]
name = "benches"
harness = false
path = "benches/benches.rs"

[dev-dependencies]
criterion.workspace = true
hdrhistogram.workspace = true
lazy_static.workspace = true
execution-report = { path = "crates/execution-report" }
types = { path = "crates/types" }
fix = { path = "crates/protocol/FIX" }
db = { path = "crates/db" }
market-feed = { path = "crates/market-feed" }
