[package]
name = "openai-olfeo"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.11.0"
csv = "1.4.0"
futures = "0.3.31"
indexmap = { version = "2.12.0", features = ["serde"] }
openai = "1.1.1"
phf = { version = "0.13.1", features = ["macros"] }
serde = "1.0.228"
serde_json = "1.0.145"
tokio = "1.48.0"
