[package]
name = "openai-olfeo"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.42", features = ["serde", "std"] }
clap = { version = "4.5.52", features = ["derive"] }
csv = "1.4.0"
futures = "0.3.31"
indexmap = { version = "2.12.0", features = ["serde"] }
rand = "0.9.2"
reqwest = { version = "0.12.24", features = ["json"] }
serde = "1.0.228"
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
