[package]
name = "ssecret"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.48", features = ["derive"] }
ctrlc = "3.5.0"
derive = "1.0.0"
inotify = "0.11.0"
json = "0.12.4"
rayon = "1.11.0"
rayon-core = "1.13.0"
serde = { version = "1.0.226", features = ["derive"] }
serde_derive = "1.0.226"
serde_json = "1.0.145"
