[package]
name = "core"
version = "0.1.0"
edition = "2021"

[dependencies]
once_cell =   "1.21.3"
# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

utils = { path = "../utils" }
config ={ path = "../config"}
format ={ path = "../format"}
traits ={ path = "../trait"}
llm = { path = "../llm"}
statistics = { path = "../statistics"}

csv = "1.4.0"
