[package]
name = "format"
version = "0.1.0"
edition = "2021"

[dependencies]
indexmap = "2.13.0"
itertools = "0.14.0"
# Internal dependencies
traits = { path = "../trait" }
utils = { path = "../utils" }
statistics = { path = "../statistics" }     # Likely needs core types
csv = "1.4.0"

# # Workspace dependencies
# serde = { workspace = true }
# serde_json = { workspace = true }
# anyhow = { workspace = true }

# # Format-specific
# csv = "1.3"                     # For CSV formatting
# html-escape = "0.2"             # For HTML escaping

# # Optional: for more advanced HTML generation
# # tera = "1.19"                 # Templating engine
# # askama = "0.12"               # Compile-time templates

# [dev-dependencies]
# pretty_assertions = "1.4"       # Better test output