[package]
name = "llm"
version = "0.1.0"
edition = "2021"

[dependencies]
async-scoped = { version = "0.9.0", features = ["tokio", "use-tokio"] }
atomic_float = "1.1.0"
chrono = "0.4.43"
rand = "0.9.2"
reqwest = { version = "0.13.1", features = ["blocking", "json"] }
serde.workspace = true
serde_json.workspace = true
tokio = "1.49.0"

utils = { path = "../utils" }     # Likely needs core types
config = { path = "../config" }