[package]
name = "db"
version = "0.1.0"
edition = "2024"

[dependencies]
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio-native-tls"] }
tokio = { version = "1", features = ["full"] }
dotenvy = "0.15"  # Optional: to read .env file for DB URL
spsc.workspace = true
# itoa = "1.0.17"
# logging = { path = "../logging" }
# order-book = { path = "../order-book" }
# fix = { path = "../protocol/FIX" }
utils = { path = "../utils" }
types = { path = "../types" }
tracing.workspace = true