[package]
name = "grpc"
version = "0.1.0"
edition = "2024"

[dependencies]
tonic          = "0.12"
prost          = "0.13"
tokio          = { version = "1", features = ["full"] }
crossbeam-channel.workspace = true
sqlx           = { version = "0.8.6", features = ["postgres", "runtime-tokio-native-tls"] }
order-book     = { path = "../order-book" }
db             = { path = "../db" }
tracing.workspace = true

[build-dependencies]
tonic-build = "0.12"
