[package]
name = "order-book"
version = "0.1.0"
edition = "2024"

[dependencies]
tracing.workspace = true
spsc.workspace = true
logging = { path = "../logging" }
types = { path = "../types" }
utils = { path = "../utils" }
snapshot = { path = "../snapshot" }
crossbeam-channel.workspace = true
arc-swap = "1.9.1"

# Dev dependencies for testing
[dev-dependencies]
tracing-subscriber.workspace = true
criterion.workspace = true
hdrhistogram.workspace = true
crossbeam.workspace = true
core_affinity.workspace = true
lazy_static.workspace = true

[[bench]]
name = "ob_bench"
harness = false
path = "bench/bench.rs"

[profile.bench]
debug = true