[package]
name = "proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
types = { path = "../types" }
tracing.workspace = true
core_affinity.workspace = true
axum.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
hyper.workspace = true
futures = "0.3"
utils = { path = "../utils" }
socket2.workspace = true