[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
fix = { path = "../protocol/FIX" }
spsc.workspace = true
crossbeam.workspace = true
crossbeam-channel.workspace = true
types = { path = "../types" }
web = { path = "../web" }
market-feed = { path = "../market-feed" }
utils = { path = "../utils" }
tracing.workspace = true
socket2 = "0.6"
tokio.workspace = true
core_affinity.workspace = true