[package]
name = "snapshot"
version = "0.1.0"
edition = "2024"

[dependencies]
tracing.workspace = true
spsc.workspace = true
logging = { path = "../logging" }
types = { path = "../types" }
utils = { path = "../utils" }
crossbeam-channel.workspace = true

[dev-dependencies]
tracing-subscriber.workspace = true