[package]
name = "web"
version = "0.1.0"
edition = "2024"

[dependencies]
axum            = { version = "0.8", features = ["ws"] }
tokio           = { version = "1",   features = ["full"] }
tower-http      = { version = "0.6", features = ["fs", "cors"] }
serde           = { version = "1",   features = ["derive"] }
serde_json      = "1"
futures         = "0.3"
futures-util    = "0.3"
tokio-tungstenite = { version = "0.29.0", features = ["rustls-tls-webpki-roots"] }
reqwest         = { version = "0.12.0", default-features = false, features = ["json", "rustls-tls"] }
tracing.workspace = true
chrono          = { version = "0.4", features = ["serde"] }
base64          = "0.22"
argon2          = "0.5"
rand_core       = { version = "0.6", features = ["getrandom"] }
core_affinity   = "0.8"

types           = { path = "../types" }
utils          = { path = "../utils" }
order-book      = { path = "../order-book" }
execution-report = { path = "../execution-report" }
fix            = { path = "../protocol/FIX" }
grpc           = { path = "../grpc" }
tonic          = "0.12"
db             = { path = "../db" }
sqlx           = { version = "0.8.6", features = ["postgres", "runtime-tokio-native-tls", "chrono"] }