[package]
name = "fix"
version = "0.1.0"
edition = "2024"

[dependencies]
order-book = { path = "../../order-book" }
memory = { path = "../../memory" }
utils = { path = "../../utils" }
types = { path = "../../types" }
spsc.workspace = true
crossbeam.workspace = true
crossbeam-channel.workspace = true
serde.workspace = true
itoa = "1.0.17"
tracing.workspace = true
tracing-subscriber = "0.3"

[features]
default = ["branchless", "simd"]
branchless = []
simd = []

[[bench]]
name = "fix_bench"
harness = false
path = "benches/fix.rs"

[dev-dependencies]
criterion.workspace = true
hdrhistogram.workspace = true
lazy_static = "1"


[[example]]
name = "profile_simd"
path = "examples/profile_simd.rs"