[package]
name = "players"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "players-server"
path = "src/main.rs"

[dependencies]
tokio.workspace = true
tonic.workspace = true
prost.workspace = true
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio-native-tls", "chrono"] }
serde.workspace = true
serde_json.workspace = true
chrono = { version = "0.4", features = ["serde"] }
tracing.workspace = true
tracing-subscriber.workspace = true
argon2 = "0.5"
rand_core = { version = "0.6", features = ["getrandom"] }
tower = "0.4"
tower-http = { version = "0.6", features = ["trace"] }

utils = { path = "../../utils" }
db = { path = "../../db" }

[build-dependencies]
tonic-build = "0.13"
